# Copyright (C) 2024 learturely <learturely@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "xddcc"
version = "0.0.1"
authors = ["learturely"]
edition = "2021"
license = "MIT"
description = "XiDian Distant Courses Collector"
documentation = "https://docs.rs/xddcc"
repository = "https://github.com/learturely/xddcc"

[dependencies]
chrono = "0.4"
cxsign = { git = "https://github.com/worksoup/newsign.git", branch = "dev-v0.2" }
# cxsign = { path = "../newsign/" }
inquire = "0.7"
log = "0.4"
percent-encoding = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.10", features = ["cookies", "json"] }
xdsign_data = { git = "https://github.com/learturely/xdsign_data.git" }
